// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client Credentials Grant generate token 1`] = `
Object {
  "access_token": Any<String>,
  "expires_in": 7200,
  "refresh_token": null,
  "token_type": "Bearer",
}
`;

exports[`Client Credentials Grant generate token 2`] = `
Object {
  "accessToken": Any<String>,
  "accessTokenExpiresAt": Any<Date>,
  "client": Object {
    "createdAt": Any<Date>,
    "deletedAt": null,
    "id": "client-test-id",
    "redirectUris": Array [
      "http://localhost:8080",
    ],
    "secret": "client-test-secret",
    "updatedAt": Any<Date>,
  },
  "createdAt": Any<Date>,
  "deletedAt": null,
  "refreshToken": null,
  "refreshTokenExpiresAt": null,
  "scopes": Array [
    Object {
      "alias": "read",
      "createdAt": Any<Date>,
      "deletedAt": null,
      "description": "Read",
      "updatedAt": Any<Date>,
    },
    Object {
      "alias": "write",
      "createdAt": Any<Date>,
      "deletedAt": null,
      "description": "Write",
      "updatedAt": Any<Date>,
    },
  ],
  "updatedAt": Any<Date>,
  "user": Object {
    "client": Object {
      "createdAt": Any<Date>,
      "deletedAt": null,
      "id": "client-test-id",
      "redirectUris": Array [
        "http://localhost:8080",
      ],
      "secret": "client-test-secret",
      "updatedAt": Any<Date>,
    },
    "createdAt": Any<Date>,
    "deletedAt": null,
    "password": "user-test-password",
    "updatedAt": Any<Date>,
    "username": "user-test-username",
  },
}
`;

exports[`Client Credentials Grant generate token with refresh token 1`] = `
Object {
  "Content-Type": "application/json",
}
`;

exports[`Client Credentials Grant generate token with refresh token 2`] = `
Object {
  "access_token": Any<String>,
  "expires_in": 7200,
  "refresh_token": Any<String>,
  "token_type": "Bearer",
}
`;

exports[`Client Credentials Grant generate token with refresh token 3`] = `
Object {
  "accessToken": Any<String>,
  "accessTokenExpiresAt": Any<Date>,
  "client": Object {
    "createdAt": Any<Date>,
    "deletedAt": null,
    "id": "client-test-id",
    "redirectUris": Array [
      "http://localhost:8080",
    ],
    "secret": "client-test-secret",
    "updatedAt": Any<Date>,
  },
  "createdAt": Any<Date>,
  "deletedAt": null,
  "refreshToken": Any<String>,
  "refreshTokenExpiresAt": Any<Date>,
  "scopes": Array [
    Object {
      "alias": "read",
      "createdAt": Any<Date>,
      "deletedAt": null,
      "description": "Read",
      "updatedAt": Any<Date>,
    },
    Object {
      "alias": "write",
      "createdAt": Any<Date>,
      "deletedAt": null,
      "description": "Write",
      "updatedAt": Any<Date>,
    },
  ],
  "updatedAt": Any<Date>,
  "user": Object {
    "client": Object {
      "createdAt": Any<Date>,
      "deletedAt": null,
      "id": "client-test-id",
      "redirectUris": Array [
        "http://localhost:8080",
      ],
      "secret": "client-test-secret",
      "updatedAt": Any<Date>,
    },
    "createdAt": Any<Date>,
    "deletedAt": null,
    "password": "user-test-password",
    "updatedAt": Any<Date>,
    "username": "user-test-username",
  },
}
`;
